--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,33 +1,61 @@
 * {
-    font-family: 'Baloo 2', cursive;
+    font-family: 'Montserrat', sans-serif;
+}
+
+html {
+    box-sizing: border-box;
+}
+
+*, *::before, *::after {
+    box-sizing: inherit;
+}
+
+.wave-container {
+    position: relative;
+    background: #fff;
+    overflow: hidden;
+}
+
+@keyframes animateWave {
+    0% {
+        transform: scale(1, 0);
+    }
+    100% {
+        transform: scale(1, 1);
+    }
+}
+
+.wave-container > svg {
+    display: block;
+    transform-origin: bottom;
+    animation: animateWave 1000ms cubic-bezier(0.23, 1, 0.32, 1) forwards;
 }
 
 .text-primary {
-    color: #F73D51;
+    color: #4B5286;
 }
 
 .bg-primary {
-    background: #F73D51;
+    background: #4B5286;
 }
 
 .text-black {
     color: #3f3d56 !important;
 }
 
-.nav-link {
-    color: #F73D51;
-}
-
 .nav-link:hover {
-    color: #F73D51;
-    background: #fff;
+    color: #4B5286;
 }
 
 .active {
-    color: #F73D51;
+    color: #4B5286;
     text-decoration: underline;
 }
 
 .activeIcon {
-    color: #F73D51;
+    fill: #4B5286;
+}
+
+.fill-teal {
+    fill: #4fd1c5;
 }
